# dir_compat

./: .dockerignore  README.md  pyproject.toml
dir_compat/: main.py
tests/: test_from_lin_to_win.py
