[project]
name = "dir-compat"
version = "0.1.0"
description = "Directory compatibility checker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dir_compat = "dir_compat.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "single"
